@@ -269,5 +269,5 @@ UPDATE tconfig SET value='PD110923 (3.2 Migrate)' WHERE token = 'db_scheme_build
 -- -----------------------------------------------------
 -- Encode empty space entities (Added 17th May 2012)
 -- -----------------------------------------------------
-UPDATE tnetwork_component SET name = REPLACE(name,' ','&#x20;')
-UPDATE tlocal_component SET name = REPLACE(name,' ','&#x20;')
+UPDATE tnetwork_component SET name = REPLACE(name,' ','&#x20;');
+UPDATE tlocal_component SET name = REPLACE(name,' ','&#x20;');
