@@ -1,3 +1,12 @@
+2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: added the lost
+	semicolons in some standments.
+	
+	* godmode/reporting/visual_console_builder.php: restore the search
+	modules without entities, because there was a bug into the recon
+	server that recode two times the name, now run all parts fine.
+
 2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* operation/agentes/estado_agente.php: Improved
